--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1 id="head">JavaScript Practice</h1>
     <button onclick="">Click me!</button>
-    <h1 class="head">ubaid </h1>
+    <h1 class="head">u</h1>
     <p id="para">Lorem ipsum</p>
     <button onclick="changeText()">Click Me!</button>
 
